[tool.poetry]
name = "opstools"
version = "0.1.0"
description = ""
authors = ["Isac Petruzzi <isac.petruzzi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "*"
boto3    = "*"
Jinja2   = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
