[tool.poetry]
name = "opstools"
version = "0.1.0"
description = ""
authors = ["Isac Petruzzi <isac.petruzzi@gmail.com>"]

[tool.poetry.dependencies]
boto3 = "^1.26.61"
Jinja2 = "^3.1.2"
python = "^3.9.10"
requests = "^2.28.2"
cerberus = "^1.3.4"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-describe = "^2.0.1"
pytest-mock = "^3.10.0"
pytest-watch = "^4.2.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry>=1.3.0"]
build-backend = "poetry.masonry.api"
