[tool.poetry]
name = "opstools"
version = "0.1.0"
description = "Tools for Operations"
authors = ["Artsy Product Velocity Team <product-velocity@artsymail.com>"]

[tool.poetry.dependencies]
boto3 = "^1.26.61"
Jinja2 = "^3.1.2"
python = ">=3.9,<3.11"
requests = "^2.31.0"
cerberus = "^1.3.4"
pytz = "^2023.3"
pyjwt = "^2.7.0"
hvac = "^1.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
pytest-describe = "^2.0.1"
pytest-mock = "^3.10.0"
pytest-watch = "^4.2.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry>=1.3.0"]
build-backend = "poetry.masonry.api"
